--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.41",
